@@ -23,9 +23,12 @@ typedef int socklen_t;
 /* In reality, the MS API says this is a `u_long' although it does not define
  * this type.  See: http://msdn2.microsoft.com/en-us/library/ms738571.aspx  */
 typedef UINT32 in_addr_t;
-#  else // Assume GCC...
+#  elif defined __GNUC__
+#   include <stdint.h>
 typedef uint32_t socklen_t;
 typedef uint32_t in_addr_t;
+#  else
+// Neither VC++ nor GCC: Let's try to continue ...
 #  endif
 
 // http://msdn2.microsoft.com/en-us/library/ms740481.aspx
